  alias_mvp sm 292
- If 'sp' command is called without a player target, it will target yourself.
  Useful for e.g. 'alias_heal sp 28'.
- 'Item Appeared' message and 'il' command now display the item's
  coordinates.
- The Linux version no longer depends on sys/ioctl.ph. This means 
  the dynamic interface (support for left/right arrow keys, etc.) will work
  out-of-the-box on many systems now.

New commands:
- guild join (flag)
  Accept or deny a guild join request.
- pl (number)
  Show detailed information about a player.

New config options:
- useSelfSkill_#_monsters
  partySkill_#_monsters
  partySkill_#_target_monsters
  useSelf_item_#_monsters
  Only activate useSelfSkill/partySkill/useSelf_item if a certain 
  monster attacks.
- partySkill_#_target_aggressives
  Only activate partySkill if a certain monster attacks a party member.

Bug fixes:
- Kore can walk on walkable water now (bug #21).
- Don't open shop immediately after login in X-Kore mode (bug #49).
- sitAuto_idle doesn't conflict with shopAuto_open's timeout now (bug #50).
- MO_BODYRELOCATION is now recognized as an area-usage skill.
- Don't display "level 65535" when an area-usage skill is used.
- Incoming Request to join Guild message now displays guild name.
- Alchemist potions aren't called [?254] anymore.
- Cards in equipment in storage weren't being displayed.
- $item->{type} is now set correctly for equipment in storage.

Internal:
- findIndex() and related functions are now much faster (bug #16).
- writeDataFile*() won't write trailing spaces.
- Functions in Tools.dll are now called through XS, Perl's native
  C-to-Perl interface.
- Kore now detects what directory its executable is in, and adds it to
  its include path (@INC).
- Fixed a crash when cart inventory is not available (such as during login).
- Some parseMsg messages moved to parseMsg_presence.
- Improved lockMap and randomWalk settings. Without route_randomWalk,