@@ -28,7 +28,7 @@ our %EXPORT_TAGS = (
 	config  => [qw(%config %consoleColors %directions_lut %equipTypes_lut @headgears_lut %items_lut %itemSlotCount_lut %itemsDesc_lut %itemTypes_lut %jobs_lut %maps_lut %cities_lut %npcs_lut %portals_lut %sex_lut %shop %skills_lut %skills_rlut %skillsID_lut %skillsID_rlut %skillsDesc_lut %skillsLooks %skillsArea %skillsSP_lut %emotions_lut %timeout $char)],
 	ai      => [qw(@ai_seq @ai_seq_args %ai_v $AI $AI_forcedOff %targetTimeout)],
 	state   => [qw($accountID @chars %cart %field @itemsID %items @monstersID %monsters @npcsID %npcs @playersID %players @portalsID %portals @storeList $currentChatRoom @currentChatRoomUsers @chatRoomsID %chatRooms @skillsID %storage @storageID @arrowCraftID %guild %incomingGuild)],
-	network => [qw($remote_socket $conState $encryptVal $lastPacketTime)],
+	network => [qw($remote_socket $conState $encryptVal $lastPacketTime $xkore)],
 	interface => [qw($interface)],
 	misc    => [qw($buildType $quit %timeout_ex $isOnline $shopstarted $dmgpsec $totalelasped $elasped $totaldmg %overallAuth)],
 );
@@ -156,6 +156,7 @@ our $remote_socket;
 our $conState;
 our $encryptVal;
 our $lastPacketTime;
+our $xkore;
 
 # Interface
 our $interface;
